syntax = "proto3";
package rbp.user.profile;

import "rbp/plugin/option.proto";

import "user/user_profile_message.proto";

/*
user_profile rpc 协议
*/

option go_package = "github.com/olaola-chat/rbp-proto/rpcclient/user";


service UserProfile {
	option (rbp.plugin.rbp_service).name = "User.Profile";

	//是否需要实名认证
	rpc NeedVerify (rbp.user.profile.ReqNeedVerify) returns (RepNeedVerify);

	//批量获取用户
	rpc Mget (rbp.user.profile.ReqUserProfiles) returns (RepUserProfiles);

	rpc Test (ReqUserProfiles) returns (RepUserProfiles);
}


